Adicionar Exercicio MeuNome Aula 02

--- a/CodersMobile_Android/aula02/aula02_TelaLogin/app/src/main/res/layout/activity_main.xml
+++ b/CodersMobile_Android/aula02/aula02_TelaLogin/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="@dimen/marginLeft"
         android:layout_marginTop="@dimen/marginTopEmail"
         android:layout_marginEnd="@dimen/marginRight"
+        android:inputType="textEmailAddress"
         android:backgroundTint="@color/branco"
         android:hint="@string/email"
         android:textColor="@color/branco"
@@ -34,6 +35,7 @@
         android:layout_marginStart="@dimen/marginLeft"
         android:layout_marginTop="@dimen/marginTopPassword"
         android:layout_marginEnd="@dimen/marginRight"
+        android:inputType="numberPassword"
         android:backgroundTint="@color/branco"
         android:hint="@string/password"
         android:textColor="@color/branco"
