--- a/CodersMobile_Android/aula02/aula02_CalcularSalario/app/src/main/res/layout/activity_main.xml
+++ b/CodersMobile_Android/aula02/aula02_CalcularSalario/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
         android:paddingRight="@dimen/paddingButton"
         android:text="@string/calcular"
         android:textColor="@color/BRANCO"
+        android:textAllCaps="false"
         android:textSize="@dimen/buttonTextSize" />
 
     <TextView
