--- a/CodersMobile_Android/aula03/FakeLoginApp/app/src/main/res/layout/activity_welcome.xml
+++ b/CodersMobile_Android/aula03/FakeLoginApp/app/src/main/res/layout/activity_welcome.xml
@@ -33,4 +33,24 @@
         android:letterSpacing="0.3"
         android:textStyle="bold"/>
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floating_action_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:background="@color/colorMain"
+            app:srcCompat="@drawable/ic_baseline_favorite_24"/>
+
+        <View
+            android:id="@+id/mostrar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </LinearLayout>
