--- a/CodersMobile_Android/aula03/FakeLoginApp/app/src/main/res/layout/activity_create_account.xml
+++ b/CodersMobile_Android/aula03/FakeLoginApp/app/src/main/res/layout/activity_create_account.xml
@@ -68,6 +68,7 @@
             android:textColorHint="@color/colorMain"
             android:backgroundTint="@color/colorMain"
             android:layout_marginTop="20dp"
+            app:startIconTint="@color/colorMain"
             app:startIconDrawable="@drawable/ic_baseline_email_24"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
             <com.google.android.material.textfield.TextInputEditText
@@ -90,13 +91,14 @@
             android:layout_marginTop="20dp"
             app:startIconDrawable="@drawable/ic_baseline_lock_24"
             app:endIconMode="password_toggle"
+            app:startIconTint="@color/colorMain"
+            app:endIconTint="@color/colorMain"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
         </com.google.android.material.textfield.TextInputLayout>
-
 
         <CheckBox
             android:id="@+id/cbAgree"
@@ -106,12 +108,11 @@
             android:layout_marginTop="10dp"
             android:text="@string/privacy_policy"/>
 
-
         <Button
             android:id="@+id/btnSignUpCreateAccount"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:background="@color/colorMain"
+            android:backgroundTint="@color/colorMain"
             android:layout_gravity="center"
             android:text="@string/btnSign_up_createAccount"
             android:textSize="16sp"
@@ -126,6 +127,7 @@
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:color="@color/colorWhite"
             android:text="@string/btnLog_in_createAccount"
+            android:textColor="@color/colorMain"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"/>
 
