--- a/CodersMobile_Android/aula03/FakeLoginApp/app/src/main/res/layout/activity_main.xml
+++ b/CodersMobile_Android/aula03/FakeLoginApp/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
             android:text="@string/btnLog_in"
-            android:background="@color/colorWhite"
+            android:backgroundTint="@color/colorWhite"
             android:textColor="@color/colorMain"
             android:textSize="16sp" />
 
